<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.admin.AdminAddProjectFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_project_form"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/project_name"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <EditText
        android:id="@+id/et_project_name"
        android:hint="@string/hint_project_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/project_description"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <EditText
        android:id="@+id/et_student_firstname"
        android:hint="@string/hint_project_description"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/project_media"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <EditText
        android:id="@+id/et_project_media"
        android:hint="@string/hint_project_media"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/project_students"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <Spinner
        android:id="@+id/spin_project_students"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        android:spinnerMode="dropdown"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_project_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
        <Button
            android:id="@+id/btn_add"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>