<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.admin.AdminAddStudentFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_student_form"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/student_lastname"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <EditText
        android:id="@+id/et_student_lastname"
        android:hint="@string/hint_student_lastname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/student_firstname"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <EditText
        android:id="@+id/et_student_firstname"
        android:hint="@string/hint_student_firstname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/student_level"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <Spinner
        android:id="@+id/spin_student_level"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/student_speciality"
        android:textSize="20dp"
        android:textStyle="italic"/>
    <Spinner
        android:id="@+id/spin_student_speciality"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
        <Button
            android:id="@+id/btn_add"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>