<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.admin.AdminAddPollFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_poll_form"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/poll_projects"
        android:textSize="20dp"
        android:textStyle="italic"/>

    <Spinner
        android:id="@+id/spin_poll_projects"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_poll_projects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_clear"
            android:text="@string/btn_clear"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
        <Button
            android:id="@+id/btn_add"
            android:text="@string/btn_add"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>